--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:extension": "npm run build && rm -rf test-extension/dist && cp -r dist test-extension/dist",
     "watch": "tsc --watch",
     "test": "npm run build:test && node --test --test-reporter=spec dist/**/*.test.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepare": "npm run build"
   },
   "keywords": [
     "sync",
